# hello12

./: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel
tools/: missing-external.BUILD
workspace/: BUILD
